# x17ai

./: .gitignore  Cargo.toml  TODO.md  attn.cu  attn_d_kv.cuh  attn_d_q.cuh  attn_forward.cu  attn_forward.cuh  attn_fwd.cu  attn_fwd_i8.cu  attn_incremental.cu  attn_kv_fwd_i8.cu  attn_q_fwd_i8.cu  attn_qg_fwd_i8.cu  attn_y.cu  attn_y_fwd_fp8.cu  attn_y_fwd_i8.cu  bench_attn.py  block.config.json  block.json  block.py  block_cpp_config.py  block_utils.py  build.rs  check.sh  expected.txt  f_gemm.cu  f_proj.cu  ffn_d_f.cu  ffn_d_f_weights.cu  ffn_d_x.cu  ffn_d_y_weights.cu  ffn_f_fwd.cu  ffn_f_fwd_f8.cu  ffn_f_fwd_i8.cu  ffn_fwd.cu  ffn_y_fwd.cu  ffn_y_fwd_f8.cu  ffn_y_fwd_i8.cu  gemm.cu  (+41 more)
cpp/: cuda_shim.cpp  ffi.hpp  kernel_template.cu
cuda/: attn_forward.cuh  attn_fwd.cuh  attn_fwd_i8.cuh  base_matmul.cuh  dense_matmul.cuh  dense_matmul_dw.cuh  dense_matmul_dx.cuh  f_proj.cuh  gemm.cuh  gemm_b16.cuh  gemm_b8.cuh  o_proj.cuh  qkv_proj.cuh  qkvg_fwd.cuh  qkvg_fwd_i8.cuh  qkvg_fwd_i8_.cuh  qkvg_proj.cuh  sparse_gemm.cuh  sparse_matmul.cuh  sparse_matmul_dx.cuh  utils.cuh  utils_b16.cuh  utils_b32.cuh  utils_b8.cuh  utils_core.cuh  utils_f8.cuh
docs/: design.md
src/: alloc.rs  autograd.rs  batch.rs  buffer.rs  computation.rs  compute_seq.rs  context.rs  cpu.rs  cpu_dev.rs  device.rs  dim_merger.rs  dtype.rs  eval_context.rs  expr.rs  format.rs  lib.rs  literal.rs  main.rs  matrix.rs  model_ctx.rs  new.rs  new_tensor.rs  nn.rs  optimizer.rs  param.rs  rand.rs  rng.rs  shape.rs  tensor.rs  tensor2.rs  util.rs  x17ai.rs
src/autograd/: add.rs  split.rs
src_old/: lib.rs  nn.rs  rng.rs  util.rs
templates/: elemwise.cu  elemwise_1d.cu  gemm_kernel.cu  reduce.cu
templates_old/: elemwise.cu  reduce.cu
(+219 files in other folders)
