[package]
name = "x17ai" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Jiri <jiri.bobek@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
smallvec = { version = "1.7.0", features = ["union"] }
#inkwell = { version = "0.4.0", features = ["llvm17-0"] }
#llvm-sys = "181"
tempfile = "3.2.0"
libloading = "0.7"
bit-set = "0.6.0"
thin-vec = "0.2.13"
