[package]
name = "x17ai" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Jiri <jiri.bobek@gmail.com>"]
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
smallvec = { version = "1.15.0", features = ["union"] }
# bit-set = "0.6.0"
thin-vec = "0.2.14"
# arrayvec = "0.7.4"
# matrixmultiply = "0.3.8"
# ndarray = "0.16.1"
stderrlog = "0.6.0"
log = "0.4.22"
# assert_approx_eq = "1.1.0"
# tch = "0.20.0"
safetensors = "0.5.3"
hashbrown = "0.15.5"
const-siphasher = "1"
# fat_type = "0.3.0"
# num_enum = "0.7.4"
# minijinja = "2.12.0"
askama = "0.14.0"

[build-dependencies]
cc = "1.0"

[lib]
doctest = false
